<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="Struct_InputRTU" Id="{1445f0da-0542-4e6a-a8f5-f67ebaa288a9}">
    <Declaration><![CDATA[TYPE Struct_InputRTU :
STRUCT
	InStartAddr			: WORD;
	InQuantity			: WORD;
	InUnitID			: BYTE;
	InBuffer			: POINTER TO BYTE;
	InFunction			: UINT;
	OutBusy				: POINTER TO BOOL;
	OutError			: POINTER TO BOOL;
	OutCompleted 		: POINTER TO BOOL;
	OutErrorId			: POINTER TO INT ; 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>